--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 My vim conf
+to install it :
+- git clone https://github.com/behtea/myvimconf.git ~/.vim
+- cd ~/.vim && git submodule update --init
+- ln -s ~/.vim/vimrc ~/vimrc
